create basic html body structure + add css properties to #container div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
-body {
-  background-color: black;
+/*using css selectors to add css properties */
+/*overwrite other css libraries style.css file with our own style.css file */
+
+/*css class selector for the outer most div element*/
+#container {
+  background-color: gray;
+  width: 360px;
+  margin: 0 auto; /*topbot leftright - center div horizontally*/
 }
